Fixed overflow issue

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,5 @@
 .home.screen {
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .home.section {
